# workshop-streamlit-aovivo

./: README.md  pyproject.toml
src/: app.py
